--- a/configs/Concat_UNet.yaml
+++ b/configs/Concat_UNet.yaml
@@ -3,7 +3,7 @@ key: purple
 binary: True
 batch_size: 8
 n_channels: 12
-epochs: 6
+epochs: 50
 imagenet: False
 seed: 47
 patience: 5
@@ -42,8 +42,21 @@ dataset_specs:
   activation_date_csv: '../data/geospatialdownloader/scripts/satellite_data.csv'
   mask_filtering: False
   only_burnt: True
+  
 
 # Training callbacks
+trainer:
+ gpus: 1
+ log_every_n_steps: 1
+ progress_bar_refresh_rate: 1
+ benchmark: True
+ precision: 16
+ gradient_clip_val: 5.0
+ num_sanity_val_steps: 3
+ sync_batchnorm: True
+# distributed_backend="ddp",  # DistributedDataParallel
+# resume_from_checkpoint="cyst_checkpoints/prova1/epoch=20-step=8546.ckpt"
+
 earlystopping:
   monitor: val_loss
   min_delta: 0.001
