--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ scipy == 1.5.2
 seaborn == 0.11.1
 segmentation_models_pytorch == 0.1.3
 sklearn == 0.0
-torch == 1.5.0a0+b58f89b
+torch
 torchvision == 0.2.1
 tqdm == 4.50.2
 wandb == 0.11.1
