--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
 Pillow
-easydict == 1.9
-matplotlib == 3.1.2
+easydict
+matplotlib
 numpy
 opencv_python == 4.5.1.48
 pandas == 1.1.2+1.g514aca06b1
 pytorch_lightning == 1.2.10
 scikit_image == 0.17.2
-scipy == 1.11.1
-seaborn == 0.11.1
+scipy
+seaborn
 segmentation_models_pytorch == 0.1.3
-sklearn == 0.0
+sklearn
 torch
-torchvision == 0.2.1
-tqdm == 4.50.2
-wandb == 0.11.1
+torchvision
+tqdm
+wandb
